--- a/app/src/main/res/layout/content_schedule.xml
+++ b/app/src/main/res/layout/content_schedule.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/button_choose_date_schedule"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/choose_date"
+                android:text="اختر التاريخ"
                 android:layout_gravity="center"
                 android:layout_marginVertical="20dp"
                 />
@@ -35,7 +35,7 @@
                 android:id="@+id/textViewDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/date"
+                android:text="التاريخ"
                 android:textSize="25sp"
                 android:layout_gravity="center"
                 />
@@ -43,7 +43,7 @@
                 android:id="@+id/button_edit_spots"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/edit_spots"
+                android:text="تعديل الأوقات المتاحة"
                 android:layout_gravity="center"
                 android:layout_marginVertical="20dp"/>
             <ListView
