--- a/app/src/main/res/layout/content_student_main.xml
+++ b/app/src/main/res/layout/content_student_main.xml
@@ -19,11 +19,12 @@
     <TextView
         android:id="@+id/top3textView"
         android:layout_marginTop="25dp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:text="@string/top_three_instructors"
+        android:text="أفضل 3 أساتذة"
         android:textStyle="bold"
+        android:gravity="right"
         android:layout_below="@+id/viewPagerQuote"/>
 
 
@@ -44,6 +45,7 @@
         android:layout_height="wrap_content"
         android:text="ابحث عن أستاذ"
         android:layout_below="@+id/top3text"
-        android:gravity="right|center_horizontal"/>
+        android:layout_centerHorizontal="true"
+        />
 
 </RelativeLayout>
