--- a/app/src/main/res/layout/content_instructor_main.xml
+++ b/app/src/main/res/layout/content_instructor_main.xml
@@ -11,7 +11,7 @@
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPagerQuote"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="25dp"
         android:layout_width="match_parent"
         android:layout_height="260dp">
     </android.support.v4.view.ViewPager>
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
+        android:layout_marginRight="20dp"
         android:text="أفضل 3 أساتذة"
         android:textStyle="bold"
         android:gravity="right"
