--- a/app/src/main/res/layout/content_student_main.xml
+++ b/app/src/main/res/layout/content_student_main.xml
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
+        android:layout_marginRight="20dp"
         android:text="أفضل 3 أساتذة"
         android:textStyle="bold"
         android:gravity="right"
