--- a/app/src/main/res/layout/lessonsitems.xml
+++ b/app/src/main/res/layout/lessonsitems.xml
@@ -16,7 +16,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/title"/>
+            android:id="@+id/date"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/time"/>
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
