--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -9,9 +9,7 @@
         android:id="@+id/answers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:text="answers"
+        android:text="الاجابات"
         android:textSize="20dp"
         android:textStyle="bold"
         android:textColor="@android:color/black"/>
@@ -19,30 +17,35 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/answersList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="482dp"
         android:layout_alignParentStart="true"
         android:layout_below="@id/answers"
-        android:layout_margin="5dp" />
+        android:layout_marginBottom="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp" />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/addAnswer"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginRight="55dp"
+        android:layout_marginLeft="55dp"
         android:padding="15dp"
-        android:hint="write a comment here"
+        android:hint="اكتب الاجابة هنا"
         android:inputType="textMultiLine"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:background="@drawable/text_field"/>
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/answerButton"
         android:layout_alignBottom="@id/addAnswer"
-        android:layout_alignParentEnd="true"
-        android:src="@drawable/send"
+        android:src="@drawable/send1"
         android:padding="12dp"
-        android:layout_alignParentRight="true" />
+        android:layout_alignParentLeft="true" />
 
 </RelativeLayout>
