--- a/app/src/main/res/layout/activity_ask.xml
+++ b/app/src/main/res/layout/activity_ask.xml
@@ -10,17 +10,15 @@
         android:id="@+id/questionText"
         android:layout_width="350dp"
         android:layout_height="89dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="179dp"
-        android:layout_marginStart="14dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="120dp"
+        android:background="@drawable/text_field"
         android:ems="10"
-        android:hint="type the question here"
+        android:hint="اكتب نص السؤال هنا"
         android:inputType="textMultiLine"
         tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="181dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="14dp" />
+        tools:layout_editor_absoluteY="181dp" />
 
 
     <TextView
@@ -40,8 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="82dp"
-        android:text="publish"
+        android:layout_marginBottom="243dp"
+        android:text="انشر"
         tools:layout_editor_absoluteX="148dp"
         tools:layout_editor_absoluteY="338dp" />
 
