--- a/app/src/main/res/layout/all_answers_layout.xml
+++ b/app/src/main/res/layout/all_answers_layout.xml
@@ -11,7 +11,8 @@
         android:layout_marginRight="7dp"
         android:layout_marginStart="7dp"
         android:layout_marginTop="7dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/border">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,32 +21,32 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/AnswerUserName"
+                android:id="@+id/AnsweerTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="user name"
-                android:textColor="@android:color/black"
-                android:textSize="16dp"
+                android:text="الوقت"
+                android:textColor="@android:color/holo_blue_light"
+                android:textSize="11dp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/AnswerDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="date"
-                android:textColor="@android:color/darker_gray"
+                android:text="التاريخ"
+                android:textColor="@android:color/holo_blue_light"
                 android:textSize="13dp"
                 android:layout_marginLeft="40dp"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/AnsweerTime"
+                android:id="@+id/AnswerUserName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="time"
-                android:layout_marginLeft="80dp"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="11dp"
+                android:text="الاسم"
+                android:layout_marginLeft="50dp"
+                android:textColor="@android:color/holo_blue_light"
+                android:textSize="16dp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -60,8 +61,12 @@
                 android:id="@+id/AnswerText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="comments here"
-                android:textColor="@android:color/holo_blue_light"
+                android:layout_gravity="end"
+                android:gravity="right"
+                android:padding="3dp"
+                android:text="الاجابة"
+                android:textColor="@android:color/black"
+                android:textDirection="anyRtl"
                 android:textSize="13dp"
                 android:textStyle="bold" />
 
@@ -77,6 +82,7 @@
                 android:id="@+id/likeButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="180dp"
                 android:src="@drawable/dislike" />
 
             <TextView
@@ -87,7 +93,7 @@
                 android:padding="10dp"
                 android:textColor="@android:color/black"
                 android:textStyle="bold"
-                android:text="0Likes"/>
+                android:text="0 اعجاب"/>
 
         </LinearLayout>
 
