--- a/app/src/main/res/layout/all_questions_layout.xml
+++ b/app/src/main/res/layout/all_questions_layout.xml
@@ -9,7 +9,8 @@
         android:layout_marginBottom="6dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:background="@drawable/border">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -17,48 +18,52 @@
             android:layout_marginTop="1dp"
             android:padding="5dp"
             android:orientation="horizontal">
+
             <TextView
-                android:id="@+id/userName"
+
+                android:id="@+id/questionDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="user name"
-                android:layout_marginLeft="5dp"
+                android:text="التاريخ"
+                android:layout_marginLeft="40dp"
                 android:layout_marginRight="70dp"
                 android:layout_marginTop="8dp"
                 android:textAlignment="textStart"
                 android:gravity="start"
-                android:textSize="16dp"
+                android:textSize="13dp"
                 android:textStyle="bold"
                 android:textColor="@android:color/holo_blue_dark"/>
 
             <TextView
-                android:id="@+id/questionDate"
+                android:id="@+id/userName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
+                android:layout_marginLeft="50dp"
                 android:layout_marginTop="8dp"
-                android:text="date"
+                android:text="الاسم"
                 android:textColor="@android:color/holo_blue_dark"
-                android:textSize="13dp"
+                android:textSize="16dp"
                 android:textStyle="bold"
                 android:textAlignment="textEnd"/>
+
 
 
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/questionDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="3dp"
-                android:layout_marginRight="3dp"
+                android:layout_gravity="end"
+                android:gravity="right"
                 android:padding="3dp"
-                android:text="Question description"
+                android:text="نص السؤال"
                 android:textColor="@android:color/black"
+                android:textDirection="anyRtl"
                 android:textSize="14dp" />
         </LinearLayout>
 
@@ -73,11 +78,12 @@
                 android:id="@+id/commetsButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="180dp"
                 android:src="@drawable/comments" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="comments"
+                android:text="الاجابات"
                 android:padding="15dp"/>
         </LinearLayout>
 
