--- a/app/src/main/res/layout/content_blackboard2.xml
+++ b/app/src/main/res/layout/content_blackboard2.xml
@@ -16,8 +16,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="13dp"
         android:layout_marginStart="13dp"
-        android:layout_marginTop="50dp"
-        android:text="ask" />
+        android:layout_marginTop="60dp"
+        android:text="اسأل" />
 
     <Button
         android:id="@+id/myQuestionsButton"
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/askButton"
         android:layout_centerHorizontal="true"
-        android:text="my questions" />
+        android:text="أسئلتي" />
 
     <Button
         android:id="@+id/filters"
@@ -34,7 +34,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignTop="@+id/askButton"
         android:layout_marginEnd="16dp"
-        android:text="filters"
+        android:text="فلترة"
         android:layout_alignParentRight="true"
         android:layout_marginRight="16dp" />
 
