--- a/app/src/main/res/layout/content_reservations.xml
+++ b/app/src/main/res/layout/content_reservations.xml
@@ -9,7 +9,7 @@
     tools:showIn="@layout/app_bar_instructor_main"
     android:orientation="vertical">
 
-    <android.support.design.widget.AppBarLayout
+   <!-- <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_marginTop="50dp"
@@ -22,11 +22,12 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:src="@drawable/lessons_learned"/>
-    </android.support.design.widget.AppBarLayout>
+    </android.support.design.widget.AppBarLayout>-->
 
     <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         app:tabGravity="fill"
         app:tabMode="fixed"
         android:id="@+id/tabLayoutReservations"
