--- a/app/src/main/res/layout/lessonsitems.xml
+++ b/app/src/main/res/layout/lessonsitems.xml
@@ -5,6 +5,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/border"
         android:orientation="vertical">
 
         <TextView
