--- a/app/src/main/res/layout/row_spinner.xml
+++ b/app/src/main/res/layout/row_spinner.xml
@@ -17,6 +17,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/border"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/textType"
