--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -6,6 +6,8 @@
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
+       android:layout_margin="10dp"
+
        android:orientation="vertical">
     <TextView
         android:layout_width="wrap_content"
