--- a/app/src/main/res/layout/row_spinner.xml
+++ b/app/src/main/res/layout/row_spinner.xml
@@ -18,6 +18,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/border"
+            android:layout_margin="10dp"
+
             android:orientation="vertical">
             <TextView
                 android:id="@+id/textType"
