--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -7,6 +7,8 @@
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:layout_margin="10dp"
+       android:padding="10dp"
+
 
        android:orientation="vertical">
     <TextView
