--- a/app/src/main/res/layout/all_questions_layout.xml
+++ b/app/src/main/res/layout/all_questions_layout.xml
@@ -70,21 +70,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp">
+            android:orientation="horizontal">
 
             <ImageButton
                 android:id="@+id/commetsButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="180dp"
+                android:layout_marginLeft="280dp"
                 android:src="@drawable/comments" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="الاجابات"
-                android:padding="15dp"/>
         </LinearLayout>
 
     </LinearLayout>
