--- a/app/src/main/res/layout/activity_ask.xml
+++ b/app/src/main/res/layout/activity_ask.xml
@@ -43,4 +43,11 @@
         tools:layout_editor_absoluteX="148dp"
         tools:layout_editor_absoluteY="338dp" />
 
+    <Spinner
+        android:id="@+id/QuestionSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/textView" />
+
 </RelativeLayout>
