--- a/app/src/main/res/layout/all_answers_layout.xml
+++ b/app/src/main/res/layout/all_answers_layout.xml
@@ -19,11 +19,19 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:orientation="horizontal">
+            <ImageButton
+                android:id="@+id/options2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="1dp"
+                android:src="@drawable/options"
+                android:layout_gravity="right"/>
 
             <TextView
                 android:id="@+id/AnsweerTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:text="الوقت"
                 android:textColor="@android:color/holo_blue_light"
                 android:textSize="11dp"
