--- a/app/src/main/res/layout/all_questions_layout.xml
+++ b/app/src/main/res/layout/all_questions_layout.xml
@@ -15,9 +15,18 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
+            android:layout_marginTop="5dp"
             android:padding="5dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            >
+            <ImageButton
+                android:id="@+id/options"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="1dp"
+                android:src="@drawable/options"
+                android:layout_gravity="right"/>
+
 
             <TextView
 
@@ -25,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="التاريخ"
-                android:layout_marginLeft="40dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginRight="70dp"
                 android:layout_marginTop="8dp"
                 android:textAlignment="textStart"
@@ -38,7 +47,7 @@
                 android:id="@+id/userName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
+                android:layout_marginLeft="30dp"
                 android:layout_marginTop="8dp"
                 android:text="الاسم"
                 android:textColor="@android:color/holo_blue_dark"
