--- a/app/src/main/res/layout/content_blackboard2.xml
+++ b/app/src/main/res/layout/content_blackboard2.xml
@@ -19,7 +19,23 @@
         android:layout_marginTop="60dp"
         android:text="اسأل" />
 
-
+    <Button
+        android:id="@+id/myQuestionsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/askButton"
+        android:layout_centerHorizontal="true"
+        android:text="اسئلتي" />
+    <Button
+        android:id="@+id/filters"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/askButton"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="16dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="16dp"
+        android:text="تصفية" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/allQuestionList"
