--- a/app/src/main/res/layout/upcoming_fragment.xml
+++ b/app/src/main/res/layout/upcoming_fragment.xml
@@ -6,19 +6,11 @@
     android:gravity="center">
 
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="لإلغاء الحجز انقر على الدرس"
-        android:textSize="20sp"
-        android:textColor="#FF0000"
-        />
-
     <ListView
         android:id="@+id/listViewUpcoming"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:layout_margin="20dp"
         android:padding="10dp">
     </ListView>
